--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,4 +6,6 @@ stages:
 test:
   stage: test
   script:
+    - apt update -y
+    - apt install -y git build-essential clang cppcheck clang-tidy
     - make -C ./Calculator
