Binary tree search with google tests is implemented

--- a/BinaryTree/Makefile
+++ b/BinaryTree/Makefile
@@ -1,8 +1,8 @@
 TESTS = gTests
 
-GTEST_DIR = ../../googletest/googletest
+GTEST_DIR = ../googletest/googletest
 
-LINK_FLAGS =  -lboost_iostreams -lboost_filesystem -lpthread -lboost_system
+LINK_FLAGS =  
 LINK_FLAGS += -fsanitize=address,undefined
 
 COMPILER = clang++-6.0
@@ -16,9 +16,9 @@ GTEST_HEADERS += $(GTEST_DIR)/include/gtest/internal/*.h
 
 SRCS =	gTests.cpp
 
-INC =	gTests.hpp
+INC =	BinaryTree.hpp
 
-all : cppcheck $(TESTS)
+all : cppcheck clang-tidy $(TESTS)
 	./$(TESTS)
 
 clean :
@@ -41,7 +41,7 @@ gtest.a : gtest-all.o
 gtest_main.a : gtest-all.o gtest_main.o
 	$(AR) $(ARFLAGS) $@ $^
 
-gTests.o: gTests.cpp gTests.hpp $(GTEST_HEADERS)
+gTests.o: gTests.cpp $(INC) $(GTEST_HEADERS)
 	$(COMPILER) -c gTests.cpp -o gTests.o $(CXXFLAGS) $(CPPFLAGS)
 
 $(TESTS): gTests.o gtest_main.a
@@ -53,4 +53,8 @@ cppcheck:
 
 .PHONY : clang-format
 clang-format:
-	clang-format --style=file -i $(SRCS) $(INC)
+	clang-format --style=file -i $(INC)
+
+.PHONY : clang-tidy
+clang-tidy:
+	clang-tidy BinaryTree.hpp --
